# hellocl

./: .gitignore  README
C/: Makefile  hellocl.c  names.c  names.h  print.h  query.c  query.h
haskell/: LICENSE  TAGS  hellocl.cabal  stack.yaml
haskell/src/: Main.hs
