name:                hellocl
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/sajith/hellocl#readme
license:             BSD3
license-file:        LICENSE
author:              Sajith Sasidharan
maintainer:          sajith@nonzen.in
copyright:           2016 Sajith Sasidharan
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hellocl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , OpenCL
